# text-compressor

./: .flake8  .pre-commit-config.yaml  0001-updated-compression.patch  README.md  bench.py  demo.huff  highly_repetitive.rle  pyproject.toml
demo/: demo_mixed.huff  demo_mixed.txt
demo_rle/: highly_repetitive_rle_out.txt
reports/: benchmarks.md
samples/: emoji.huff  emoji.txt  lorem-out.huff  lorem.huff  repetitive.huff  repetitive.txt
tests/: test_bitstream.py  test_cli.py  test_huffman.py  test_rle.py
text_compressor/: cli.py  compressors.py
text_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
text_compressor/algorithms/: huffman.py  rle.py
text_compressor/utils/: bitstream.py  stats.py
