[project]
name = "text-compressor"
version = "0.1.0"
description = "CLI tool for text compression using RLE and Huffman coding"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
text-compressor = "text_compressor.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["text_compressor*"]
exclude = ["tests*", "samples*"]

